# hybridencrypt

./: .env.example  .gitignore  CHANGELOG.md  HOW_TO_USE.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.claude/commands/: analyze.md
benchmarks/: benchmark_results.csv  benchmark_results.json  conftest.py  test_crypto_benchmarks.py
docs/: GITHUB_READINESS_REPORT.md
spy/: __init__.py  audit_logger.py  auth.py  auth_engine.py  cli.py  container_reader.py  container_writer.py  crypto_container.py  crypto_engine.py  dashboard.py  demo.py  ecc_engine.py  file_crypto_engine.py  governance_pipeline.py  governance_rules.py  gui.py  hybrid_engine.py  key_provider.py  key_registry.py  orchestrator.py  policy_engine.py  rsa_engine.py  setup_keys.py  signature_engine.py  user_model.py  workspace.py
spy/agents/: decrypt_agent.py  encrypt_agent.py
tests/: conftest.py  test_agent.py  test_agent_boundaries.py  test_audit_logger.py  test_auditor_tools.py  test_auth.py  test_authorization_matrix.py  test_classified_output_paths.py  test_container_classification.py  test_failure_cases.py  test_file_encryption.py  test_governance_pipeline.py  test_integration.py  test_key_fingerprint.py  test_key_registry_validation.py  test_key_rotation.py  test_policy_classification.py  test_provider_centralization.py  test_rewrap_version.py  test_safe_workspace.py  test_sign_verify_audit.py  test_signature_enforcement.py  test_stream_encryption.py  test_user_management.py  test_user_validation.py  test_zeroization.py
tests/fixtures/: sample.txt
(+1 files in other folders)
